--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -24,4 +24,4 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add .
           git commit -m 'update'
-          git push
+          git push https://github.com/taikowiki/taiko-song-database
