--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: '/package-lock.json'
       
       - name: fetch song data
         run: node scripts/fetch.js
