--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -29,7 +29,7 @@ jobs:
           git pull origin main
       
       - name: crawl
-        run: node src/lib/data/crawl.js
+        run: node scripts/update.js
 
       - name: Get changed files
         id: changed-files
