--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v45
+        with:
+          files: |
+            database.json
 
       - name: make history
         if: steps.changed-files.outputs.any_changed == 'true'
