--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -34,9 +34,14 @@ jobs:
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v45
-        with:
-          files: |
-            database.json
+
+      - name: List all changed files
+        env:
+          ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
+        run: |
+          for file in ${ALL_CHANGED_FILES}; do
+            echo "$file was changed"
+          done
 
       - name: make history
         if: steps.changed-files.outputs.any_changed == 'true'
